--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,16 @@
   
 }
 body{
+  scrollbar-color: rgb(41, 41, 41);
   background-color: #f4ffdb;
+}
+body::-webkit-scrollbar {
+  width: 14px;
+  background-color: rgb(22, 12, 61);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(139, 139, 139);
 }
 .app {
   
