--- a/frontend/src/screens/projectScreen.css
+++ b/frontend/src/screens/projectScreen.css
@@ -1,4 +1,9 @@
-
+.project-screen{
+  background-color: rgb(41, 41, 41);
+  color: white;
+  height: 100%;
+  overflow: hidden;
+}
 
 .container {
   margin-top: 40px;
@@ -15,21 +20,36 @@ button{
   border-radius: 20px;
   background-color: rgb(97, 255, 202);
   cursor: pointer;
+  transition: all 0.1s ease-in-out;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  &:hover{
+    box-shadow: 2px 2px 20px 2px rgb(255, 255, 255);
+    transform: scale(1.1);
+    background-color: rgba(0, 0, 0, 0.803);
+    color: rgb(255, 255, 255);
+  }
 }
 .card {
   gap: 20px;
-  width: calc(33.33% - 16px); 
+  width: calc(25% - 16px); 
   box-sizing: border-box;
- 
   border-radius: 9px;
   padding: 20px;
+  background-color: rgba(35, 58, 61, 0.829);
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  box-shadow: 0px 0px 0.1px 2px rgb(100, 100, 100);
+  transition: all 0.2s ease-in-out;
+  perspective: 20px;
+  box-shadow: 10px 6px 600px 1px rgb(176, 199, 255);
+  &:hover{
+    box-shadow: 0px 0px 200px 20px rgb(147, 255, 251);
+    transform: perspective(900px) rotateY(7deg) scale(1.14);
+    background-color: rgba(82, 244, 190, 0.803);
+    color: black;
+  }
 }
 
 .card .primg {
@@ -46,8 +66,6 @@ button{
   margin-bottom: 10px;
   border-radius: 30px;
 }
-
-
 .card h3 {
   font-size: 1.5rem;
   margin-bottom: 8px;
