--- a/frontend/src/components/project.css
+++ b/frontend/src/components/project.css
@@ -1,7 +1,98 @@
-.project{
+.project {
+  background-color: rgb(0, 0, 0);
+  height: auto;
+  color: white;
+}
+
+.mainbox {
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
 
+.mainbox .upper {
+  width: 100%;
+  height: 60vh;
+}
+.upper img {
+  width: 100%;
+  height: inherit;
+  background-clip: border-box;
+  background-size: cover;
+}
+
+.upper .title {
+  margin-top: -200px;
+}
+.title h1 {
+  margin-left: 40px;
+  
+}
+
+.links {
+  display: flex;
+  gap: 80px;
+  margin-left: 900px;
+  margin-top: 120px;
+}
+.links .g {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: antiquewhite;
+  color: black;
+  &:hover {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 30px 2px rgb(255, 255, 255);
+    cursor: pointer;
+  }
+}
+a{
+  text-decoration: none;
+  color: inherit;
+} 
+.links .l {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: antiquewhite;
+  color: black;
+  position: relative;
+  transition: all 0s ease-in-out;
+  animation: rotateBorder 1s linear infinite;
+  &:hover {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 30px 2px rgb(255, 255, 255);
+    cursor: pointer;
+  }
+}
+
+@keyframes rotateBorder {
+  0% {
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.lower{
+  width: 100vw;
+  height: auto;
+  margin-top: 100px;
+  padding: 40px;
+  padding-bottom: 60px;
 }
