--- a/frontend/src/components/about.css
+++ b/frontend/src/components/about.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(215, 255, 242);
+  background-color: rgb(95, 255, 42);
 
 }
 a{
@@ -16,16 +16,16 @@ a{
   width: 210px;
   display: flex;
 
- background-color: rgb(213, 168, 255);
+ background-color: rgb(255, 125, 32);
   font-family: Impact,'Arial Narrow Bold', sans-serif;
   font-size: large;
   justify-content: center;
   align-items: center;
-  border: 2px solid black;
   transition: transform 1s ease-in-out;
+  color: rgb(0, 0, 0);
 }
 .sklbtn:hover{
-  background-color: rgba(255, 217, 0, 0.389);
+  background-color: rgb(24, 255, 147);
   transform: scale(1.2);
   transition: transform 0.5s ease-in-out;
   cursor: pointer;
