--- a/frontend/src/components/project.css
+++ b/frontend/src/components/project.css
@@ -79,13 +79,14 @@ a{
 
 @keyframes rotateBorder {
   0% {
-    transform: scale(1);
+    transform: scale(1) rotate(0deg);
+    
   }
   50%{
-    transform: scale(1.1);
+    transform: scale(1.1) rotate(240deg);
   }
   100% {
-    transform: scale(1);
+    transform: scale(1) rotate(360deg);
   }
 }
 
