--- a/frontend/src/components/project.css
+++ b/frontend/src/components/project.css
@@ -2,10 +2,11 @@
   background-color: rgb(0, 0, 0);
   height: auto;
   color: white;
+  width: 100vw;
 }
 
 .mainbox {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,4 +97,10 @@ a{
   margin-top: 100px;
   padding: 40px;
   padding-bottom: 60px;
+}
+
+@media (width < 785px){
+  .project{
+    overflow-x: hidden;
+  }
 }
